fixed terminal toolbar visibility issue on mobile

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -71,7 +71,7 @@
   margin-bottom: 20px;
   border-radius: 40px;
   overflow:hidden;
-  z-index: 4;
+  z-index: 1;
 }
 
 .terminalcontainer {
@@ -113,6 +113,7 @@
 
 .terminal_toolbar {
   display: flex;
+  position: relative;
   height: 30px;
   align-items: center;
   padding: 0 8px;
